# cervisia

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  ChangeLog  HACKING  Makefile.am  Messages.sh  README  TODO  addignoremenu.cpp  addignoremenu.h  addremovedialog.cpp  addremovedialog.h  addremovedlg.cpp  addremovedlg.h  addrepositorydialog.cpp  addrepositorydialog.h  addrepositorydlg.cpp  addrepositorydlg.h  annotatecontroller.cpp  annotatecontroller.h  annotatectl.cpp  annotatectl.h  annotatedialog.cpp  annotatedialog.h  annotatedlg.cpp  annotatedlg.h  annotateview.cpp  annotateview.h  cervisia-change_repos_list.pl  cervisia-normalize_cvsroot.pl  cervisia-ssh-askpass  cervisia.1.cmake  cervisia.1.in  cervisia.appdata.xml  cervisia.desktop  cervisia.lsm  (+169 more)
cvsservice/: CMakeLists.txt  DESIGN  Makefile.am  Messages.sh  TODO  cvsaskpass.cpp  cvsjob.cpp  cvsjob.h  cvsloginjob.cpp  cvsloginjob.h  cvsservice.cpp  cvsservice.desktop  cvsservice.h  cvsserviceutils.cpp  cvsserviceutils.h  main.cpp  org.kde.cervisia.cvsjob.xml  org.kde.cervisia.cvsloginjob.xml  org.kde.cervisia.cvsservice.xml  org.kde.cervisia.repository.xml  org.kde.cervisia5.cvsjob.xml  org.kde.cervisia5.cvsloginjob.xml  org.kde.cervisia5.cvsservice.xml  org.kde.cervisia5.repository.xml  org.kde.cvsservice.desktop  org.kde.cvsservice5.desktop  repository.cpp  repository.h  repositoryiface.h  sandbox.cpp  sandbox.h  sshagent.cpp  sshagent.h  vcspluginfactory.h  versioncontroliface.h
cvsservice/cvsplugin/: Makefile.am  cvspluginfactory.cpp  cvspluginfactory.h  cvsrepository.cpp  cvsrepository.h
doc/: CMakeLists.txt  index.docbook  man-cervisia.1.docbook
pics/: CMakeLists.txt  README  crsc-action-vcs_add.svgz  crsc-action-vcs_commit.svgz  crsc-action-vcs_diff.svgz  crsc-action-vcs_remove.svgz  crsc-action-vcs_status.svgz  crsc-action-vcs_update.svgz
plugins/: Makefile.am
plugins/cvsplugin/: Makefile.am  cvsplugin.cpp  cvsplugin.desktop  cvsplugin.h
po/: Makefile.am  cervisia.pot  ko.po
po/af/: cervisia.po
po/ar/: cervisia.po  cvsservice.po
po/be/: cervisia.po  cvsservice.po
po/bg/: cervisia.po  cvsservice.po
po/br/: cervisia.po  cvsservice.po
po/bs/: cervisia.po  cvsservice.po
po/ca/: cervisia.po  cvsservice.po
po/ca/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/ca@valencia/: cervisia.po  cvsservice.po
po/cs/: cervisia.po  cvsservice.po
po/cy/: cervisia.po  cvsservice.po
po/da/: cervisia.po  cvsservice.po
po/de/: cervisia.po  cvsservice.po
po/de/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/el/: cervisia.po  cvsservice.po
po/en_GB/: cervisia.po  cvsservice.po
po/eo/: cervisia.po  cvsservice.po
po/es/: cervisia.po  cvsservice.po
po/es/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/et/: cervisia.po  cvsservice.po
po/et/docs/cervisia/: index.docbook
po/eu/: cervisia.po  cvsservice.po
po/fa/: cervisia.po  cvsservice.po
po/fi/: cervisia.po  cvsservice.po
po/fr/: cervisia.po  cvsservice.po
po/fr/docs/cervisia/: index.docbook
po/ga/: cervisia.po  cvsservice.po
po/gl/: cervisia.po  cvsservice.po
po/gl/docs/cervisia/: index.docbook
po/he/: cervisia.po  cvsservice.po
po/hi/: cervisia.po  cvsservice.po
po/hne/: cervisia.po  cvsservice.po
po/hr/: cervisia.po  cvsservice.po
po/hu/: cervisia.po  cvsservice.po
po/is/: cvsservice.po
po/it/: cervisia.po  cvsservice.po
po/it/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/ja/: cervisia.po  cvsservice.po
po/ka/: cervisia.po  cvsservice.po
po/kk/: cervisia.po  cvsservice.po
po/km/: cervisia.po  cvsservice.po
po/ko/: cervisia.po  cvsservice.po
po/lt/: cervisia.po  cvsservice.po
po/lv/: cervisia.po  cvsservice.po
po/mai/: cervisia.po
po/mk/: cvsservice.po
po/mr/: cervisia.po  cvsservice.po
po/ms/: cervisia.po  cvsservice.po
po/nb/: cervisia.po  cvsservice.po
po/nds/: cervisia.po  cvsservice.po
po/ne/: cervisia.po  cvsservice.po
po/nl/: cervisia.po  cvsservice.po
po/nl/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/nn/: cervisia.po  cvsservice.po
po/oc/: cervisia.po  cvsservice.po
po/pa/: cervisia.po  cvsservice.po
po/pl/: cervisia.po  cvsservice.po
po/pt/: cervisia.po  cvsservice.po
po/pt/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/pt_BR/: cervisia.po  cvsservice.po
po/pt_BR/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/ro/: cervisia.po  cvsservice.po
po/ru/: cervisia.po  cvsservice.po
po/ru/docs/cervisia/: index.docbook
po/se/: cervisia.po  cvsservice.po
po/sk/: cervisia.po  cvsservice.po
po/sl/: cervisia.po  cvsservice.po
po/sl/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/sq/: cervisia.po  cvsservice.po
po/sv/: cervisia.po  cvsservice.po
po/sv/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/ta/: cervisia.po  cvsservice.po
po/tg/: cervisia.po  cvsservice.po
po/tr/: cervisia.po  cvsservice.po
po/ug/: cervisia.po  cvsservice.po
po/uk/: cervisia.po  cvsservice.po
po/uk/docs/cervisia/: index.docbook  man-cervisia.1.docbook
po/xh/: cervisia.po
po/zh_CN/: cervisia.po  cvsservice.po
po/zh_TW/: cervisia.po  cvsservice.po
svnservice/: Makefile.am  main.cpp  repository.cpp  repository.h  svnjob.cpp  svnjob.h  svnrepository.cpp  svnrepository.h  svnservice.cpp  svnservice.desktop  svnservice.h
tests/: resolvedlg-BR74903-test-01.txt  resolvedlg-conflict-test-01.txt  resolvedlg-conflict-test-02.txt
